--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,23 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.abw.bukansembarangquiz.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
-        android:padding="8dp">
+        android:background="#e0e0e0"
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/score_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:paddingTop="8dp"
             android:text="Score"
             android:textSize="20sp" />
 
@@ -30,28 +28,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:paddingTop="8dp"
             android:text="0"
             android:textSize="20sp" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/question"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/score"
+            android:paddingBottom="20dp"
+            android:paddingTop="30dp"
+            android:text="Pertanyaan"
+            android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/question"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginBottom="40dp"
-        android:padding="8dp"
-        android:text="Pertanyaan"
-        android:textSize="20sp" />
+    </RelativeLayout>
 
 
     <Button
         android:id="@+id/choice1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:background="#0091EA"
-        android:padding="8dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20sp"
+        android:layout_weight="1"
+        android:background="@drawable/mybutton"
         android:text="1"
         android:textColor="#fff" />
 
@@ -60,7 +62,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:background="#0091EA"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20sp"
+        android:layout_weight="1"
+        android:background="@drawable/mybutton"
         android:padding="8dp"
         android:text="2"
         android:textColor="#fff" />
@@ -70,7 +75,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:background="#0091EA"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20sp"
+        android:layout_weight="1"
+        android:background="@drawable/mybutton"
         android:padding="8dp"
         android:text="3"
         android:textColor="#fff" />
@@ -78,10 +86,9 @@
     <Button
         android:id="@+id/quit"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:background="#B71C1C"
-        android:padding="8dp"
+        android:layout_height="10dp"
+        android:layout_weight="1"
+        android:background="@color/colorAccent"
         android:text="quit"
         android:textColor="#fff" />
 
